package behavior.strategy;

/**
 * 项目名：IntelliJ IDEA
 * 包名：behavior.template
 * 文件名：null.java
 * 创建时间：2022/1/9
 *
 * @author jacky.li
 * @version v1.0.00
 * 描述：
 * @since
 */
public class Strategy2 extends Strategy{

    @Override
    void doAlgorithm() {
        System.out.println("策略2的算法");
    }
}
