@startuml
'https://plantuml.com/class-diagram

abstract class Strategy {
    +doAlgorithm()
}
class Strategy1 {
    +doAlgorithm()
}
class Strategy2 {
    +doAlgorithm()
}
class Strategy3 {
    +doAlgorithm()
}

Strategy <|-- Strategy1
Strategy <|-- Strategy2
Strategy <|-- Strategy3

class Context {
    -Strategy strategy;
    +setStrategy(Strategy x);
    +contextApi()
}

Context o-> Strategy: strategy

class AppClient {}
AppClient --> Context


@enduml